# Snake-Game

./: Button.cpp  Button.h  CMakeLists.txt  Font.cpp  Font.h  Fruit.cpp  Fruit.h  MouseEvent.cpp  MouseEvent.h  Position.cpp  Position.h  README.md  Screen.cpp  Screen.h  Snake.cpp  Snake.h  SnakeFunction.cpp  SnakeFunction.h  SnakeGame.cpp  SnakeGame.h  StateEnum.h  States.cpp  States.h  fontsEnum.h  main.cpp
